# rbeis

./: .gitignore  .mailmap  LICENSE  README.md  example.md  pyproject.toml  pyspark.py  rbeis.py  setup.py  spec.md
.github/workflows/: pages.yml  sphinx-pages.yml
docs/: conf.py  index.rst  rbeis.rst
docs/_build/dirhtml/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_build/dirhtml/_modules/: index.html
docs/_build/dirhtml/_modules/rbeis/: index.html
docs/_build/dirhtml/_modules/rbeis/pandas/: index.html
docs/_build/dirhtml/_modules/rbeis/rpandas/: index.html
docs/_build/dirhtml/_modules/rbeis/spark/: index.html
docs/_build/dirhtml/_sources/: index.md.txt  index.rst.txt
docs/_build/dirhtml/_sources/api/: index.rst.txt
docs/_build/dirhtml/_sources/api/rbeis/: index.rst.txt
docs/_build/dirhtml/_sources/autoapi/: index.rst.txt
docs/_build/dirhtml/_sources/autoapi/rbeis/: index.rst.txt
docs/_build/dirhtml/_sources/notes/: index.md.txt
docs/_build/dirhtml/_sources/spec/: index.md.txt
docs/_build/dirhtml/api/: index.html
docs/_build/dirhtml/api/rbeis/: index.html
docs/_build/dirhtml/autoapi/: index.html
docs/_build/dirhtml/autoapi/rbeis/: index.html
docs/_build/dirhtml/genindex/: index.html
docs/_build/dirhtml/notes/: index.html
docs/_build/dirhtml/py-modindex/: index.html
docs/_build/dirhtml/search/: index.html
docs/_build/dirhtml/spec/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/doctrees/api/rbeis/: index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/rbeis/: index.doctree
docs/_build/doctrees/notes/: index.doctree
docs/_build/doctrees/spec/: index.doctree
docs/notes/: index.md
docs/spec/: index.md
rbeis/: __init__.py  pandas.py  rpandas.py  spark.py
src/rbeis/: pandas.py  rbeis_pandas.py
tests/: artists_full.csv  artists_missing.csv  artists_unique.csv  artists_unique_count.csv  artists_unique_count_missing.csv  artists_unique_galcount_spaceavg.csv  artists_unique_galcount_spaceavg_missing.csv  artists_unique_missing.csv  pandas_test.py  pyspark_test.py  spark_test.py  tests_old.py.bak
(+15 files in other folders)
