[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rbeis"
authors = [{name = "Phil Yeeles", email = "Phil.Yeeles@ons.gov.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://www.ons.gov.uk"

[project.optional-dependencies]
#test = [ # FIXME
#    "pytest",
#    "pytest-cov",
#]
# doc = [
#     "sphinx",
#     "myst-parser",
# ]

[tool.pytest.ini_options]
addopts = "--cov"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["rbeis"]
