[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rbeis"
authors = [{name = "Phil Yeeles", email = "SMLHelp@ons.gov.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pandas >= 0.20.3",
                "numpy >= 1.13.1",
		"pytest >= 3.2.1",
		"pytest-cov >= 2.3.1",
		"sphinx >= 3.5.4",
		"myst-parser >= 0.11.2"]

[project.urls]
Home = "https://www.ons.gov.uk"

[tool.pytest.ini_options]
addopts = "--cov"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["rbeis"]
